@@ -1,96 +1,79 @@
 package com.example.InventoryManagementSystem.service;
 
-import com.example.InventoryManagementSystem.dto.PaymentTransactionRequestDTO;
-import com.example.InventoryManagementSystem.dto.PaymentTransactionResponseDTO;
+import com.example.InventoryManagementSystem.dto.*;
 import com.example.InventoryManagementSystem.model.PaymentTransaction;
 import com.example.InventoryManagementSystem.Repository.PaymentTransactionRepository;
 import com.example.InventoryManagementSystem.service.PaymentTransactionService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.OffsetDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PaymentTransactionServiceImpl implements PaymentTransactionService {
 
-    private final PaymentTransactionRepository repository;
+    private final PaymentTransactionRepository repo;
 
     @Override
     public PaymentTransactionResponseDTO create(PaymentTransactionRequestDTO dto) {
 
-        PaymentTransaction payment = new PaymentTransaction();
+        PaymentTransaction p = PaymentTransaction.builder()
+                .invoiceId(dto.getInvoiceId())
+                .paymentMethod(dto.getPaymentMethod())
+                .transactionReference(dto.getTransactionReference())
+                .amount(dto.getAmount())
+                .build();
 
-        payment.setInvoiceId(dto.getInvoiceId());
-        payment.setPaymentMethod(dto.getPaymentMethod());
-        payment.setTransactionReference(dto.getTransactionReference());
-        payment.setAmount(dto.getAmount());
-
-        payment.setPaymentDate(
-                dto.getPaymentDate() != null
-                        ? dto.getPaymentDate()
-                        : OffsetDateTime.now()
-        );
-
-        PaymentTransaction saved = repository.save(payment);
-
-        return mapToResponse(saved);
+        repo.save(p);
+        return map(p);
     }
 
     @Override
     public List<PaymentTransactionResponseDTO> getAll() {
-        return repository.findAll()
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return repo.findAll().stream().map(this::map).toList();
     }
 
     @Override
     public PaymentTransactionResponseDTO getById(Long id) {
-
-        PaymentTransaction payment = repository.findById(id)
+        PaymentTransaction p = repo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Payment not found"));
 
-        return mapToResponse(payment);
+        return map(p);
     }
 
     @Override
-    public PaymentTransactionResponseDTO update(Long id,
-                                                PaymentTransactionRequestDTO dto) {
+    public PaymentTransactionResponseDTO update(Long id, PaymentTransactionRequestDTO dto) {
 
-        PaymentTransaction payment = repository.findById(id)
+        PaymentTransaction p = repo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Payment not found"));
 
-        payment.setInvoiceId(dto.getInvoiceId());
-        payment.setPaymentMethod(dto.getPaymentMethod());
-        payment.setTransactionReference(dto.getTransactionReference());
-        payment.setAmount(dto.getAmount());
-        if (dto.getPaymentDate() != null) {
-            payment.setPaymentDate(dto.getPaymentDate());
-        }
+        p.setInvoiceId(dto.getInvoiceId());
+        p.setPaymentMethod(dto.getPaymentMethod());
+        p.setTransactionReference(dto.getTransactionReference());
+        p.setAmount(dto.getAmount());
 
-        PaymentTransaction updated = repository.save(payment);
+        repo.save(p);
 
-        return mapToResponse(updated);
+        return map(p);
     }
 
     @Override
     public void delete(Long id) {
-        repository.deleteById(id);
+        PaymentTransaction p = repo.findById(id)
+                .orElseThrow(() -> new RuntimeException("Payment not found"));
+
+        repo.delete(p);
     }
 
-    private PaymentTransactionResponseDTO mapToResponse(
-            PaymentTransaction payment) {
-
+    private PaymentTransactionResponseDTO map(PaymentTransaction p) {
         return PaymentTransactionResponseDTO.builder()
-                .transactionId(payment.getTransactionId())
-                .invoiceId(payment.getInvoiceId())
-                .paymentMethod(payment.getPaymentMethod())
-                .transactionReference(payment.getTransactionReference())
-                .amount(payment.getAmount())
-                .paymentDate(payment.getPaymentDate())
+                .transactionId(p.getTransactionId())
+                .invoiceId(p.getInvoiceId())
+                .paymentMethod(p.getPaymentMethod())
+                .transactionReference(p.getTransactionReference())
+                .amount(p.getAmount())
+                .paymentDate(p.getPaymentDate())
                 .build();
     }
 }
